--- a/android-imagen-texto/app/src/main/res/values/strings.xml
+++ b/android-imagen-texto/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="settext">SetText</string>
     <string name="usuario">Usuario</string>
     <string name="escribe_algo">Escribe algo:</string>
+    <string name="comprobar">Comprobar</string>
 
 </resources>
